--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@ import HeaderButton from './HeaderButton.astro';
 
 <header 
 class="flex justify-between items-center py-6 w-full"
+style="padding: 1% 15%;"
 >
     <!-- Left side -->
     <div class="px-15 flex items-center">
