--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,30 +1,35 @@
----
-import malt from '../assets/malt.png'
----
-
-<footer class="flex justify-between items-center py-8 w-full" style="padding: 1% 30%;">
+<footer class="flex justify-between items-center py-8 w-full opacity-50" style="padding: 1% 30%;">
 
     <div class="flex items-center">
-        <p class="text-l">Develop by Daniel Sereno</p>
+        <p class="text-l">Develop by Daniel Sereno Fernandez</p>
     </div>
 
-    <nav class="flex felx-row items-center gap-x-10 opacity-90">
-        <a href="">
+    <nav class="flex felx-row items-center gap-x-10">
+        <a href="" class="hover:opacity-80">
             <svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 viewBox="0 0 24 24" 
                 fill="currentColor" 
-                class="w-9 h-9 text-white hover:text-gray-400 transition-colors"
+                class="w-9 h-9 text-white"
             >
                 <path 
                     d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.207 11.387.6.113.793-.263.793-.587v-2.17c-3.338.725-4.033-1.613-4.033-1.613-.547-1.387-1.338-1.753-1.338-1.753-1.093-.75.087-.725.087-.725 1.207.087 1.838 1.238 1.838 1.238 1.073 1.837 2.813 1.3 3.5.987.113-.775.42-1.3.763-1.6-2.665-.3-5.467-1.337-5.467-5.93 0-1.313.467-2.387 1.237-3.225-.125-.3-.537-1.513.113-3.15 0 0 1.007-.325 3.3 1.237.957-.263 1.987-.4 3.007-.4 1.02 0 2.05.137 3.007.4 2.293-1.562 3.3-1.237 3.3-1.237.65 1.637.238 2.85.113 3.15.775.838 1.237 1.912 1.237 3.225 0 4.6-2.807 5.625-5.48 5.925.43.375.813 1.125.813 2.275v3.375c0 .325.193.7.8.587C20.563 21.8 24 17.3 24 12c0-6.63-5.37-12-12-12z"
                 />
             </svg>
         </a>
-        <a href="">
-            <svg  xmlns="http://www.w3.org/2000/svg"  width="46"  height="46"  viewBox="0 0 24 24"  fill="#009dff"  class="icon icon-tabler icons-tabler-filled icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 2a5 5 0 0 1 5 5v10a5 5 0 0 1 -5 5h-10a5 5 0 0 1 -5 -5v-10a5 5 0 0 1 5 -5zm-9 8a1 1 0 0 0 -1 1v5a1 1 0 0 0 2 0v-5a1 1 0 0 0 -1 -1m6 0a3 3 0 0 0 -1.168 .236l-.125 .057a1 1 0 0 0 -1.707 .707v5a1 1 0 0 0 2 0v-3a1 1 0 0 1 2 0v3a1 1 0 0 0 2 0v-3a3 3 0 0 0 -3 -3m-6 -3a1 1 0 0 0 -.993 .883l-.007 .127a1 1 0 0 0 1.993 .117l.007 -.127a1 1 0 0 0 -1 -1" /></svg>
+        <a href="" class="hover:opacity-80">
+            <svg  
+                xmlns="http://www.w3.org/2000/svg"  
+                width="46"  
+                height="46"  
+                viewBox="0 0 24 24"  
+                fill="#009dff"  
+                class="icon icon-tabler icons-tabler-filled icon-tabler-brand-linkedin"
+            >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 2a5 5 0 0 1 5 5v10a5 5 0 0 1 -5 5h-10a5 5 0 0 1 -5 -5v-10a5 5 0 0 1 5 -5zm-9 8a1 1 0 0 0 -1 1v5a1 1 0 0 0 2 0v-5a1 1 0 0 0 -1 -1m6 0a3 3 0 0 0 -1.168 .236l-.125 .057a1 1 0 0 0 -1.707 .707v5a1 1 0 0 0 2 0v-3a1 1 0 0 1 2 0v3a1 1 0 0 0 2 0v-3a3 3 0 0 0 -3 -3m-6 -3a1 1 0 0 0 -.993 .883l-.007 .127a1 1 0 0 0 1.993 .117l.007 -.127a1 1 0 0 0 -1 -1" />
+            </svg>
         </a>
-        <a href="">
+        <a href="" class="hover:opacity-80">
             <svg xmlns="http://www.w3.org/2000/svg" aria-label="Malt" role="img" viewBox="0 0 512 512" width="40px" height="40px" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><rect width="512" height="512" rx="15%" fill="#ff6161"></rect> <path fill="#f5f5f5" d="m408.4 103.8c-32.5-32.4-67.1-11.4-88.8 10.2L114.8 318.8c-21.7 21.7-44.4 54.7-10.2 88.8c34.1 34.1 67 11.4 88.7-10.3l204.8-204.8c21.7-21.6 42.7-56.3 10.3-88.7zm-195.7-8.4 43.4 43.4 44.1-44.2c3-3 6-5.8 9.1-8.4c-4.6-23.3-17.9-44.4-53.3-44.4c-35.4 0-48.7 21.2-53.2 44.5c3.3 2.9 6.6 5.8 9.9 9.1zm87.5 322.1-44.1-44.1-43.4 43.3c-3.3 3.3-6.5 6.4-9.8 9.2c5 23.8 19 45.5 53.1 45.5c34.2 0 48.3-21.9 53.2-45.7c-3-2.6-6-5.2-9-8.2zm-105.9-217h-83.6c-30.7 0-70 9.7-70 55.5c0 34.3 21.9 48.3 45.8 53.2c2.8-3.2 107.8-108.7 107.8-108.7zm231.5 2.3c-2.6 3-107.9 108.8-107.9 108.8h82.4c30.7 0 70-7.3 70-55.6c0-35.3-21.1-48.6-44.5-53.2zm-204.1-29.7 14.9-14.9-43.3-43.4c-21.7-21.7-54.6-44.4-88.8-10.2c-25 25-19.4 49.4-6.2 69.1c4.1-.3 123.4-.6 123.4-.6zm68.7 165.9-15 15 44.2 44.1c21.7 21.7 56.3 42.7 88.7 10.3c24.2-24.2 18.7-49.7 5.3-70c-4.3.3-123.2.6-123.2.6z"></path> </g></svg>
         </a>
         
