New header version

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,27 +10,27 @@ style="padding: 1% 15%;"
     <!-- Left side -->
     <div class="px-15 flex items-center">
         <img
-            class="rounded-full w-15 h-15 border-2 border-button-secondary" 
+            class="rounded-full w-15 h-15 border-2 border-important-text" 
             src={meLogo.src} 
             alt="my photo">
-        <span class="ml-3 font-bold">Daniel Sereno Fernandez</span>
+        <span class="ml-3 font-bold text-important-text">Daniel Sereno Fernandez</span>
     </div>
 
     <!-- Right side -->
     <nav class="flex felx-row gap-x-10 opacity-90 px-15">
         <HeaderButton href="/">
-            Home
-        </a>
-        <HeaderButton href="/about">
             About
         </a>
-        <HeaderButton href="/experience">
-            Experiences
+        <HeaderButton href="">
+            Studies
         </a>
-        <HeaderButton href="/projects">
+        <HeaderButton href="">
+            Experience
+        </a>
+        <HeaderButton href="">
             Projects
         </a>
-        <HeaderButton href="/contact">
+        <HeaderButton href="">
             Contact
         </a>
     </nav>
