--- a/src/components/HeaderButton.astro
+++ b/src/components/HeaderButton.astro
@@ -1,5 +1,5 @@
 <a
-    class="bg-button-secondary flex-row justify-center text-snow-white cursor-pointer hover:bg-button-secondary-hov
+    class="bg-header-button flex-row justify-center text-button-text cursor-pointer hover:bg-header-button-hov
 focus:ring-4 focus:outline-none focus: ring-[#1dalf2]/50 font-bold text-xl
 rounded-lg px-5 py-2.5 text-center inline-flex items-center dark: focus:ring-
 [#1dalf2]/55 mr-2 mb-2 hover:shadow-lg transition-all duration-200
