--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,11 +19,23 @@ const { title } = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{ title }</title>
 	</head>
-	<body class="bg-gradient-to-b from-header-footer to-deep-teal to-violet-flare text-white-core flex flex-col min-h-screen">
+	<body class="bg-gradient-to-b from-global-background via-deep-teal to-violet-flare text-white-core flex flex-col min-h-screen">
 		<Header/>
 		<main class="flex-grow">
 			<h1>
-				TODO
+				ABOUT
+			</h1>
+			<h1>
+				STUDIES
+			</h1>
+			<h1>
+				EXPERIENCE
+			</h1>
+			<h1>
+				PROJECTS
+			</h1>
+			<h1>
+				CONTACT
 			</h1>
         </main>
 		<Footer/>
