Add new fonts, new background and about component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer class="flex justify-between items-center py-8 w-full opacity-50" style="padding: 1% 30%;">
 
     <div class="flex items-center">
-        <p class="text-l">Develop by Daniel Sereno Fernandez</p>
+        <p class="text-l text-white">Develop by Daniel Sereno Fernandez</p>
     </div>
 
     <nav class="flex felx-row items-center gap-x-10">
