--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,10 +10,10 @@ style="padding: 1% 15%;"
     <!-- Left side -->
     <div class="px-15 flex items-center">
         <img
-            class="rounded-full w-15 h-15 border-2 border-important-text" 
+            class="rounded-full w-15 h-17 border-3 border-text-main" 
             src={meLogo.src} 
             alt="my photo">
-        <span class="ml-3 font-bold text-important-text">Daniel Sereno Fernandez</span>
+        <span class="ml-3 font-bold text-text-main">Daniel Sereno Fernandez</span>
     </div>
 
     <!-- Right side -->
