--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import './src/styles/global.css';
+import '@fontsource-variable/onest';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
@@ -19,25 +20,17 @@ const { title } = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{ title }</title>
 	</head>
-	<body class="bg-gradient-to-b from-global-background via-deep-teal to-violet-flare text-white-core flex flex-col min-h-screen">
+	<body class="bg-gradient-to-b from-surface-dark via-surface-gradient-1 to-surface-gradient-2 text-white-core flex flex-col min-h-screen">
 		<Header/>
 		<main class="flex-grow">
-			<h1>
-				ABOUT
-			</h1>
-			<h1>
-				STUDIES
-			</h1>
-			<h1>
-				EXPERIENCE
-			</h1>
-			<h1>
-				PROJECTS
-			</h1>
-			<h1>
-				CONTACT
-			</h1>
+			<slot/>
         </main>
 		<Footer/>
 	</body>
 </html>
+
+<style is:global>
+	html{
+		font-family: "Onest", sans-serif;
+	}
+</style>
